tests/pass/array_pop_basic.lum
nums = [1, 2, 3]
__emit(__pop(nums), true, false)
__emit(nums, true, false)
