tests/fail/array_index_non_integer.lum
nums = [1, 2]
__emit(nums[1.5], true, false)
